04-kubernetes/06-despliegue-local/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-container
          image: localhost:5000/frontend-ms
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
