04-kubernetes/06-despliegue-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "curso06"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /api/config
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 81
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: "backend1-svc"
                port:
                  number: 81
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "backend2-svc"
                port:
                  number: 81
